Added javac option to explicitly request annotation processing, as required by Java 23