@@ -42,7 +42,7 @@ public class ExampleBuild extends Project {
     public void compile() throws Exception {
         var generated = new File(buildDirectory(), "generated");
         var ignore = generated.mkdir();
-        compileOperation().compileOptions().addAll(List.of("-s", generated.getAbsolutePath()));
+        compileOperation().compileOptions().addAll(List.of("-proc:full", "-s", generated.getAbsolutePath()));
         super.compile();
     }
 
